--- a/leetcode/46 + 47.md
+++ b/leetcode/46 + 47.md
@@ -70,3 +70,61 @@ public List<List<Integer>> permute(int[] nums) {
         }
     }
 ```
+
+47题与46题相比加了一个条件，元素可以重复，第一个反应用HashSet判断list是否重复，因为HashSet是通过值判重的。
+
+```java
+private HashSet<List> set = new HashSet<>();
+    public List<List<Integer>> permuteUnique(int[] nums) {
+      List<Integer> list = new ArrayList<>();
+      List<List<Integer>> allLists = new ArrayList<>();
+      boolean[] visited = new boolean[nums.length];
+      search(0, visited, list, allLists, nums);
+      return allLists;
+    }
+    public void search(int length, boolean[]visited, List<Integer> list, 
+                       List<List<Integer>> allLists,int[] nums){
+        if(length == nums.length && !set.contains(list)){
+            List<Integer> newlist = new ArrayList<>(list);
+            allLists.add(newlist);
+            set.add(newlist);
+            return;
+        }
+        for(int i = 0; i < nums.length; i++){
+            if(visited[i]) continue;
+            visited[i] = true;
+            list.add(nums[i]);
+            search(length+1, visited, list, allLists, nums);
+            list.remove(list.size() - 1);
+            visited[i] = false;
+        }
+    }
+```
+
+结果通过，但时间只有15.21%。看到一种更快的方法，先对数组元素排序，如果在组合时，添加的元素与前一个元素相等，且前一个元素没有访问过，就跳过该元素。
+
+```java
+public List<List<Integer>> permuteUnique(int[] nums) {
+      List<Integer> list = new ArrayList<>();
+      List<List<Integer>> allLists = new ArrayList<>();
+      boolean[] visited = new boolean[nums.length];
+      search(0, visited, list, allLists, nums);
+      return allLists;
+    }
+    public void search(int length, boolean[]visited, List<Integer> list, 
+                       List<List<Integer>> allLists,int[] nums){
+        if(length == nums.length){
+            allLists.add(new ArrayList<>(list));
+            return;
+        }
+        for(int i = 0; i < nums.length; i++){
+            if(i != 0 && nums[i] == nums[i-1] && !visited[i - 1]) continue;
+            visited[i] = true;
+            list.add(nums[i]);
+            search(length+1, visited, list, allLists, nums);
+            list.remove(list.size() - 1);
+            visited[i] = false;
+        }
+    }
+```
+
