--- a/leetcode/回溯组合的思路.md
+++ b/leetcode/回溯组合的思路.md
@@ -1,4 +1,6 @@
-# 739
+# 回溯法解决组合问题的思路
+46题
+
 题目描述：一组不重复的整数，返回它们所有的组合。
 
 ```
@@ -126,6 +128,81 @@ public List<List<Integer>> permuteUnique(int[] nums) {
             search(length+1, visited, list, allLists, nums);
             list.remove(list.size() - 1);
             visited[i] = false;
+        }
+    }
+```
+
+46题与47题的解题思路可以延伸到39与40题。这两组题是同一类型的，稍不同的是，46与47是组合，每次搜索要从头搜到尾+数组判断是否该元素之前读过；39和40是组合求和问题，不能有重复的结果（元素相同）出现，每次遍历是从当前位置开始。
+
+```
+Input: candidates = [2,3,6,7], target = 7,
+A solution set is:
+[
+  [7],
+  [2,2,3]
+]
+```
+
+```java
+public List<List<Integer>> combinationSum(int[] candidates, int target) {
+        List<Integer> combination = new ArrayList<>();
+        List<List<Integer>> allLists = new ArrayList<>();
+        search(combination, allLists, 0, candidates, target);
+        return allLists;
+    }
+    private void search(List<Integer> combination, List<List<Integer>> allLists, int index, int[] candidates, int target){
+        if(target == 0){
+            allLists.add(new ArrayList<>(combination));
+            return;
+        }
+        for(int i = index; i < candidates.length; i++){
+            if(candidates[i] <= target){
+                combination.add(candidates[i]);
+                search(combination, allLists, i, candidates, target - candidates[i]);
+                combination.remove(combination.size() - 1);
+            }
+        }
+    }
+```
+
+40题加了个条件，候选集元素可重复，但每个元素只能使用一次。
+
+```
+Input: candidates = [10,1,2,7,6,1,5], target = 8,
+A solution set is:
+[
+  [1, 7],
+  [1, 2, 5],
+  [2, 6],
+  [1, 1, 6]
+]
+```
+
+```java
+public List<List<Integer>> combinationSum2(int[] candidates, int target) {
+        List<Integer> combination = new ArrayList<>();
+        List<List<Integer>> allLists = new ArrayList<>();
+        Arrays.sort(candidates);
+        boolean[] visited = new boolean[candidates.length];
+        search(combination, allLists, 0, candidates, target, visited);
+        return allLists;
+    }
+    private void search(List<Integer> combination, List<List<Integer>> allLists, int index, int[] candidates, int target, boolean[] visited){
+        if(target == 0){
+            allLists.add(new ArrayList<>(combination));
+            return;
+        }
+        for(int i = index; i < candidates.length; i++){
+            if(i != 0 && candidates[i -1] == candidates[i] && !visited[i-1]){
+                continue;
+            }
+            if(candidates[i] <= target){
+                visited[i] = true;
+                combination.add(candidates[i]);
+                search(combination, allLists, i +1, candidates, target - candidates[i], visited);
+                combination.remove(combination.size() - 1);
+                visited[i] = false;
+            }
         }
     }
 ```
