--- a/leetcode/单轴快排与双轴快排.md
+++ b/leetcode/单轴快排与双轴快排.md
@@ -60,13 +60,21 @@ public int findKthLargest(int[] nums, int k) {
 
 1.初始化时，i=start，j=end，k=start+1。k负责扫描。
 
+![img](https://github.com/solo941/algorithms/blob/master/leetcode/pics/sort1.png)
+
 2.扫描过程中始终保持：start~i是小于pivot的元素，i~k是等于pivot的元素，j~end是大于pivot的元素
 
+![img](https://github.com/solo941/algorithms/blob/master/leetcode/pics/sort2.png)
+
 3.扫描过程中，遇到小于pivot的元素，i与k元素进行交换，i++，然后k扫描下一个元素；
+
+![img](https://github.com/solo941/algorithms/blob/master/leetcode/pics/sort3.png)
 
 遇到大于pivot的元素，k与j交换，j–，k不需加一，继续扫描k处元素。
 
 扫描过程遇到等于pivot的元素，直接扫描下一个元素。最后k>j的时候停止扫描。
+
+![img](https://github.com/solo941/algorithms/blob/master/leetcode/pics/sort4.png)
 
 ```java
 private static final int[] testItems = new int[30];
@@ -111,9 +119,11 @@ private static final int[] testItems = new int[30];
 
 1.初始化时，i=start，j=end，k=start+1，k负责扫描。序列第一个值大于序列最后一个值，需要进行交换。然后pivot1=items[start]，pivot2=items[end]。
 
+![img](https://github.com/solo941/algorithms/blob/master/leetcode/pics/sort5.png)
+
 2.扫描过程中保持：1~i是小于pivot1的元素，i~k是大于等于pivot1、小于等于pivot2的元素，j~end-1是大于pivot2的元素。
 
-
+![img](https://github.com/solo941/algorithms/blob/master/leetcode/pics/sort6.png)
 
 ```java
 private static final int[] testItems = new int[30];
