--- a/leetcode/单轴快排与双轴快排.md
+++ b/leetcode/单轴快排与双轴快排.md
@@ -50,8 +50,6 @@ public int findKthLargest(int[] nums, int k) {
 
 在这种方法之外，尝试了堆排序与Arrays自带的排序。在翻阅源代码时，发现Arrays.sort走的DualPivotQuicksort(双轴排序)。初看代码没有看懂，后来在翻阅博客时，发现了一篇非常好的总结文章，所以在这里引用并手写了一遍。
 
-[1]: https://blog.csdn.net/Holmofy/article/details/71168530	"单轴快排（SinglePivotQuickSort）和双轴快排（DualPivotQuickSort）及其JAVA实现"
-
 
 
 ## 单轴快排的优化：三分单向扫描
@@ -182,4 +180,16 @@ private static final int[] testItems = new int[30];
     }
 ```
 
-这里 i和j分别指向小于pivot1的最后一个元素和大于pivot2的第一个元素。最后一定要注意，交换pivot1和i；j和pivot2的位置。
+这里 i和j分别指向小于pivot1的最后一个元素和大于pivot2的第一个元素。最后一定要注意，交换pivot1和i；j和pivot2的位置。关于双轴排序，在jdk官方源码注释中有这样一段话：
+
+> The algorithm
+>  * offers O(n log(n)) performance on many data sets that cause other
+>  * quicksorts to degrade to quadratic performance, and is typically
+>  * faster than traditional (one-pivot) Quicksort implementations.
+
+双轴排序算法最坏时间复杂度为O(n log(n))。
+
+## 参考链接
+
+[单轴快排（SinglePivotQuickSort）和双轴快排（DualPivotQuickSort）及其JAVA实现](https://blog.csdn.net/Holmofy/article/details/71168530)
+
