--- a/算法/排序算法总结.md
+++ b/算法/排序算法总结.md
@@ -70,6 +70,8 @@ private static void selectionSort(int[] testItems) {
 
 归并排序分为两步走，第一步：自上而下递归将序列划分成长度为1的小区间；第二步：自下而上迭代的将有序数列合并。这里用一张图来解释归并排序的过程。
 
+![pic](https://github.com/solo941/algorithms/blob/master/算法/pics/mergesort.png)
+
 ```java
 private static void mergesort(int[] testItems) {
         mergesort(testItems,0,testItems.length - 1);
@@ -136,3 +138,5 @@ private static void shellsort(int[] testItems) {
 java的Arrays.sort()对原始数据类型使用双轴快排，对引用类型使用归并排序。
 
 最后，来一个图的总结
+
+![pic](https://github.com/solo941/algorithms/blob/master/算法/pics/summary.png)
