--- a/算法/排序算法总结.md
+++ b/算法/排序算法总结.md
@@ -133,6 +133,54 @@ private static void shellsort(int[] testItems) {
 
 值得注意的是，相同元素可能在各自组的插入排序中改变位置，因此是非稳定的。有证明希尔排序最差时间复杂度O(N^(3/2))。
 
+## 堆排序
+
+堆排序是使用堆的选择排序，上浮元素时，相等元素的相对位置会发生改变，因此是不稳定的。每次上浮调整结束后，最大元素在堆顶，此时交换最大元素和堆中最后一个元素的位置，重复此步骤，构建递增序列。
+
+堆是完全二叉树，具有性质：每个结点的值大于等于孩子节点的值，称为大根堆；反之，小根堆。堆可以用数组表示，k位置节点的父节点位置为 k /2，子节点位置分别是2k和2k+1。堆排序的步骤主要分为3步：
+
+1.将无需序列构建成一个堆，根据升序降序要求构建大根堆（小根堆）。
+
+2.将堆顶元素与末尾元素交换，将最大（最小）元素置于序列末端。
+
+3.调整结构，满足大根堆（小根堆）的定义，反复交换位置+调整，直到构成有序序列。
+
+```java
+private static void heapSort(int[] testItems) {
+        int n = testItems.length ;
+        //调整为大顶堆，从最后一个非叶子节点开始
+        for (int i = (n >> 1) - 1; i >= 0; i--){
+            adjustHeap(testItems,i,n);
+        }
+        //最大元素调整到数组末端，重新下沉。
+        for (int j = n-1; j > 0; j--){
+            swap(testItems, 0, j);
+            adjustHeap(testItems,0, j);
+        }
+    }
+
+    private static void swap(int[] testItems, int i, int j) {
+        int temp = testItems[i];
+        testItems[i] = testItems[j];
+        testItems[j] = temp;
+    }
+
+    private static void adjustHeap(int[] testItems, int i, int n) {
+        //当前节点与子节点对比，一直下沉到合适位置。
+        for (int k = (i << 1) + 1; k < n; k = (k << 1) + 1){
+            if (k + 1 < n && testItems[k] < testItems[k+1]){
+                k++;
+            }
+            if (testItems[k] > testItems[i]){
+                swap(testItems, i, k);
+                i = k;
+            }
+        }
+    }
+```
+
+以大根堆为例，每次排序需要将最大元素逐个添加到当前队列（每次长度减一）末尾，堆是完全二叉树，时间复杂度是O(nlogn)，空间复杂度O(1).
+
 ## 小结
 
 java的Arrays.sort()对原始数据类型使用双轴快排，对引用类型使用归并排序。
@@ -140,3 +188,14 @@ java的Arrays.sort()对原始数据类型使用双轴快排，对引用类型使
 最后，来一个图的总结
 
 ![pic](https://github.com/solo941/algorithms/blob/master/算法/pics/summary.png)
+
+## 参考资料
+
+1.[算法 - 排序](https://github.com/CyC2018/CS-Notes/blob/master/notes/算法%20-%20排序.md#%E5%A0%86%E6%8E%92%E5%BA%8F)
+
+2.[图解排序算法(三)之堆排序](https://www.cnblogs.com/chengxiao/p/6129630.html)
+
+3.[图解归并排序](https://www.jianshu.com/p/33cffa1ce613)
+
+4.[剖析JDK8中Arrays.sort底层原理及其排序算法的选择](https://www.imooc.com/article/45462)
+
