--- a/算法/排序算法总结.md
+++ b/算法/排序算法总结.md
@@ -139,7 +139,9 @@ private static void shellsort(int[] testItems) {
 
 堆是完全二叉树，具有性质：每个结点的值大于等于孩子节点的值，称为大根堆；反之，小根堆。堆可以用数组表示，k位置节点的父节点位置为 k /2，子节点位置分别是2k和2k+1。堆排序的步骤主要分为3步：
 
-1.将无需序列构建成一个堆，根据升序降序要求构建大根堆（小根堆）。
+![img](https://github.com/solo941/algorithms/blob/master/算法/pics/堆1.png)
+
+1.将无序序列构建成一个堆，根据升序降序要求构建大根堆（小根堆）。
 
 2.将堆顶元素与末尾元素交换，将最大（最小）元素置于序列末端。
 
