--- a/算法/排序算法总结.md
+++ b/算法/排序算法总结.md
@@ -143,9 +143,15 @@ private static void shellsort(int[] testItems) {
 
 1.将无序序列构建成一个堆，根据升序降序要求构建大根堆（小根堆）。
 
+![img](https://github.com/solo941/algorithms/blob/master/算法/pics/堆2.png)
+
 2.将堆顶元素与末尾元素交换，将最大（最小）元素置于序列末端。
 
+![img](https://github.com/solo941/algorithms/blob/master/算法/pics/堆3.png)
+
 3.调整结构，满足大根堆（小根堆）的定义，反复交换位置+调整，直到构成有序序列。
+
+![img](https://github.com/solo941/algorithms/blob/master/算法/pics/堆4.png)
 
 ```java
 private static void heapSort(int[] testItems) {
