--- a/算法/排序算法总结.md
+++ b/算法/排序算法总结.md
@@ -119,14 +119,15 @@ private static void mergesort(int[] testItems) {
 ```java
 private static void shellsort(int[] testItems) {
         int n = testItems.length;
-        for (int gap = (n >> 1); gap > 0; gap /= 2)
+        for (int gap = (n >> 1); gap > 0; gap >>= 1)
             for (int i = gap; i < n; i++){
+                int temp = testItems[i];
                 int j = i;
-                while (j - gap > 0 && testItems[j] < testItems[j - gap]){
+                while (j - gap >= 0 && temp < testItems[j - gap]){
                     testItems[j] = testItems[j-gap];
                     j -= gap;
                 }
-
+                testItems[j] = temp;
             }
     }
 ```
