--- a/算法/排序算法总结.md
+++ b/算法/排序算法总结.md
@@ -138,11 +138,11 @@ private static void shellsort(int[] testItems) {
 
 堆排序是使用堆的选择排序，上浮元素时，相等元素的相对位置会发生改变，因此是不稳定的。每次上浮调整结束后，最大元素在堆顶，此时交换最大元素和堆中最后一个元素的位置，重复此步骤，构建递增序列。
 
-堆是完全二叉树，具有性质：每个结点的值大于等于孩子节点的值，称为大根堆；反之，小根堆。堆可以用数组表示，k位置节点的父节点位置为 k /2，子节点位置分别是2k和2k+1。堆排序的步骤主要分为3步：
+堆是完全二叉树，具有性质：每个结点的值大于等于孩子节点的值，称为大根堆；反之，小根堆。堆可以用数组表示，假设数组长度为n，最后一个非叶子节点k的index为n/2 - 1，子节点位置分别是2k + 1和2k+2(2个叶子节点）。堆排序的步骤主要分为3步：
 
 ![img](https://github.com/solo941/algorithms/blob/master/算法/pics/堆1.png)
 
-1.将无序序列构建成一个堆，根据升序降序要求构建大根堆（小根堆）。
+1.将无序序列构建成一个堆，从最后一个非叶子节点开始，根据升序降序要求构建大根堆（小根堆）。
 
 ![img](https://github.com/solo941/algorithms/blob/master/算法/pics/堆2.png)
 
