--- a/leetcode/单轴快排与双轴快排.md
+++ b/leetcode/单轴快排与双轴快排.md
@@ -113,6 +113,8 @@ private static final int[] testItems = new int[30];
     }
 ```
 
+## 三分单向扫描的优化：双轴快速排序
+
 三分单向扫描存在一个问题，j与k交换时，如果j的元素大于pivot，k还需要再和k--交换一次。我们可以在交换前判断j的元素与pivot元素比较，大的话，不用交换，往下遍历。这种思路三分双向扫描，这里不在展开了。我们引出jdk1.8中数组排序用到的双轴快排。它用到了三分双向扫描的方法，同时，有两个pivot，划分区间也就分成了三段：x<pivot1、pivot1≤x≤pivot2，x<pivot2。过程如下：
 
 1.初始化时，i=start，j=end，k=start+1，k负责扫描。序列第一个值大于序列最后一个值，需要进行交换。然后pivot1=items[start]，pivot2=items[end]。
@@ -124,21 +126,7 @@ private static final int[] testItems = new int[30];
 ![img](https://github.com/solo941/algorithms/blob/master/leetcode/pics/sort6.png)
 
 ```java
-private static final int[] testItems = new int[30];
-    public static void main(String[] args) {
-        for (int i =0; i < testItems.length; i++){
-            testItems[i] = (int)(Math.random() * 20);
-        }
-        dualSort(testItems);
-        StringBuffer sb = new StringBuffer();
-        for (int i : testItems){
-            sb.append(i).append(',');
-        }
-        sb.deleteCharAt(sb.length() -1);
-        System.out.println(sb);
-    }
-
-    private static void dualSort(int[] testItems) {
+private static void dualSort(int[] testItems) {
         dualSort(testItems, 0, testItems.length - 1);
     }
 
@@ -152,18 +140,19 @@ private static final int[] testItems = new int[30];
                 if (testItems[k] < pivot1){
                     swap(testItems, ++i, k++);
                 }
-                else if (testItems[k] <= pivot2){
+                else if (testItems[k] <= pivot2 && testItems[k] >= pivot1){
                     k++;
                 }
                 else{
-                    while (testItems[--j] > pivot2 && j > k);
+                    while (testItems[--j] > pivot2 &&j > k);
                     if (j <= k) break;
                     if (testItems[j] < pivot1){
                         swap(testItems, j, k);
-                        swap(testItems,++i, k);
-                        k++;
+                        swap(testItems,++i, k++);
                     }
-                    else swap(testItems, j, k++);
+                    else {
+                        swap(testItems, j, k++);
+                    }
                 }
             }
             swap(testItems, start, i);
