--- a/leetcode/单轴快排与双轴快排.md
+++ b/leetcode/单轴快排与双轴快排.md
@@ -117,7 +117,7 @@ private static final int[] testItems = new int[30];
 
 三分单向扫描存在一个问题，j与k交换时，如果j的元素大于pivot，k还需要再和k--交换一次。我们可以在交换前判断j的元素与pivot元素比较，大的话，不用交换，往下遍历。这种思路三分双向扫描，这里不在展开了。我们引出jdk1.8中数组排序用到的双轴快排。它用到了三分双向扫描的方法，同时，有两个pivot，划分区间也就分成了三段：x<pivot1、pivot1≤x≤pivot2，x<pivot2。过程如下：
 
-1.初始化时，i=start，j=end，k=start+1，k负责扫描。序列第一个值大于序列最后一个值，需要进行交换。然后pivot1=items[start]，pivot2=items[end]。
+1.初始化时，i=start，j=end，k=start+1，k负责扫描。序列第一个值大于序列最后一个值，需要进行交换，相等的话，start++。然后pivot1=items[start]，pivot2=items[end]。
 
 ![img](https://github.com/solo941/algorithms/blob/master/leetcode/pics/sort5.png)
 
@@ -134,6 +134,11 @@ private static void dualSort(int[] testItems) {
         if (start < end){
             if (testItems[start] > testItems[end]){
                 swap(testItems, start, end);
+            }
+            else if(testItems[start] == testItems[end]){
+                while(testItems[start] == testItems[end] && start < end){
+                    start++;
+                }
             }
             int pivot1 = testItems[start], pivot2 = testItems[end],i = start, k =start + 1, j = end;
             while (k < j){
@@ -176,7 +181,7 @@ private static void dualSort(int[] testItems) {
 >  * quicksorts to degrade to quadratic performance, and is typically
 >  * faster than traditional (one-pivot) Quicksort implementations.
 
-双轴排序算法最坏时间复杂度为O(n log(n))。
+双轴排序算法最坏时间复杂度为O(n log(n)),并且是稳定的。
 
 ## 参考链接
 
