--- a/leetcode/103.md
+++ b/leetcode/103.md
@@ -20,11 +20,19 @@ return its zigzag level order traversal as:
 
 题目思路：
 
-拿到题目第一步想到102题。在102题中，层次遍历从左到右，使用队列从左到右添加元素。因此，103题首先尝试使用队列遍历，奇数层先右后左，偶数层先左后右。但这是不可行的，因为先出的结点的孩子，在下一层会在最后访问。
+拿到题目第一步想到102题。在102题中，层次遍历从左到右，使用队列从左到右添加元素。因此，103题首先尝试使用队列遍历，奇数层先右后左，偶数层先左后右。但这是不可行的，只能保证某一结点的子节点的先后顺序，但不能保证层次的顺序访问。
 
-第二个思路想到了栈，奇数层先左后右，偶数层先右后左，这样能保证在一层访问顺序符合要求，但不能使用一个栈保证数据可达。
+```
+       1				expected:[[1],[3,2],[4,5]]
+      / \
+     2   3				Output:[[1],[3,2],[5,4]]
+    /     \
+   4       5
+```
 
-第三个思路是使用两个栈，在奇数层进第一个栈，偶数层进第二个栈，保证每层遍历的顺序，每一层一个列表进行存储。
+第二个思路想到了栈，奇数层先左后右，偶数层先右后左，这样能保证在一层访问顺序符合要求，但存在和使用队列一样的问题。
+
+第三个思路是使用两个栈，在奇数层进第一个栈，偶数层进第二个栈，保证每层遍历的顺序，每一层使用一个列表进行存储。实际上一次遍历可以遍历两层。
 
 代码如下：
 
