--- a/leetcode/双指针找重复元素.md
+++ b/leetcode/双指针找重复元素.md
@@ -33,7 +33,7 @@ public int findDuplicate(int[] nums) {
     }
 ```
 
-因为只有一个数字是重复的，如果慢指针slow原地不动，说明存在nums[index] == slow && nums[slow] == slow，因此slow就是重复的数字。否则，这道题被转换为环链表求入口的问题。快慢指针相遇后，快指针从数组入口处和慢指针同一步长前进，直到再次相遇（相等）。相遇位置即入口（重复数字）。这里给出142题的证明过程
+因为只有一个数字是重复的，如果慢指针slow原地不动，说明存在nums[index] == slow && nums[slow] == slow，因此slow就是重复的数字。否则，这道题被转换为环链表求入口的问题。快慢指针相遇后，快指针从数组入口处和慢指针同一步长前进，直到再次相遇（相等）。相遇位置即入口（重复数字）。这里给出142题的证明过程:
 
 ```
 t = X + nY + K
