--- a/leetcode/拓扑排序.md
+++ b/leetcode/拓扑排序.md
@@ -69,7 +69,7 @@ public boolean canFinish(int numCourses, int[][] prerequisites) {
 
 上面的思路是BFS，以下图为例：
 
-
+![pic](https://github.com/solo941/algorithms/blob/master/leetcode/pics/2112205-7637f5ab5eb008fe.png)
 
 先遍历1，之后是2，之后是3，之后是4，5。
 
