--- a/leetcode/贪心思想.md
+++ b/leetcode/贪心思想.md
@@ -48,3 +48,56 @@ public int leastInterval(char[] tasks, int n) {
     }
 ```
 
+
+
+# 767. Reorganize String
+
+题目描述：给定字符串S，判断是否能将S重新组合为没有两个连续重复字符的组合，如果可能，输出组合；否则输出空字符串。
+
+```
+Example 1:
+Input: S = "aab"
+Output: "aba"
+Example 2:
+Input: S = "aaab"
+Output: ""
+```
+
+解题思路：与621题思路类似，可转化为k=1的任务分配问题（每个字符冷却长度为1）。遍历临时列表时，如果本次遍历的字符与上次相同，则说明一定会有重复字符出现。
+
+```java
+public String reorganizeString(String S) {
+        int n = S.length();
+        HashMap<Character, Integer> map = new HashMap<>();
+        StringBuffer s = new StringBuffer();
+        for(int i = 0; i < n; i++){
+            Character c = S.charAt(i);
+            map.put(c, map.getOrDefault(c,0) + 1);
+        }
+        Queue<Map.Entry<Character,Integer>> queue = new PriorityQueue<>((a,b) -> b.getValue() - a.getValue());
+        queue.addAll(map.entrySet());
+        Character last = null;
+        Character pre = null;
+        while(!queue.isEmpty()){
+            int k = 2;
+            ArrayList<Map.Entry<Character, Integer>> list = new ArrayList<>();
+            while(k>0 && !queue.isEmpty()){
+                Map.Entry<Character, Integer> top = queue.poll();
+                top.setValue(top.getValue() - 1);
+                list.add(top);
+                k--;
+            }
+            for (Map.Entry<Character, Integer> e : list) {
+                if(e.getKey() == pre) return "";
+                s.append(e.getKey());
+                pre = e.getKey();
+                if (e.getValue() > 0){
+                    queue.add(e);
+                }
+            }
+            if(queue.isEmpty()) break;
+        }
+        return s.toString();
+    }
+```
+
