--- a/leetcode/系统设计.md
+++ b/leetcode/系统设计.md
@@ -159,3 +159,66 @@ private HashMap<Integer, HashSet<Integer>> map;
     }
 ```
 
+## 341. Flatten Nested List Iterator
+
+题目描述：给定整数的网状列表，设计一个迭代器将其展开。
+
+```
+Example 1:
+Input: [[1,1],2,[1,1]]
+Output: [1,1,2,1,1]
+Explanation: By calling next repeatedly until hasNext returns false, 
+             the order of elements returned by next should be: [1,1,2,1,1].
+```
+
+解题思路：
+
+需要设置构造函数，next() 函数和 hasnext() 函数。给出的函数包括 isInteger()，getInteger()，getList()。函数具体功能如下：
+
+```
+    // @return true if this NestedInteger holds a single integer, rather than a nested list.
+ *     public boolean isInteger();
+ *
+ *     // @return the single integer that this NestedInteger holds, if it holds a single integer
+ *     // Return null if this NestedInteger holds a nested list
+ *     public Integer getInteger();
+ *
+ *     // @return the nested list that this NestedInteger holds, if it holds a nested list
+ *     // Return null if this NestedInteger holds a single integer
+ *     public List<NestedInteger> getList();
+```
+
+这里涉及到将NestedInteger展开成一串Integer，因此我们需要一个数据结构具有存储NestedInteger，读取NestedInteger和存入NestedInteger，迭代的功能。首先想到的是栈，遍历列表时从后向前，可以达到迭代器的效果。参考JDK中Iterator的设计，应该先判断 hasnext() 再读取next()。hasnext()方法应该将List中的NestedInteger展开成Integer，存入栈；next()方法则获取下一个Integer。
+
+```java
+public class NestedIterator implements Iterator<Integer> {
+    Stack<NestedInteger> stack = new Stack<>();
+    public NestedIterator(List<NestedInteger> nestedList) {
+        for(int i = nestedList.size() - 1; i >= 0; i--){
+            stack.push(nestedList.get(i));
+        }
+    }
+
+    @Override
+    public Integer next() {
+        return hasNext() ? stack.pop().getInteger() : null;
+    }
+
+    @Override
+    public boolean hasNext() {
+        while(!stack.isEmpty()){
+            NestedInteger cur = stack.peek();
+            if(cur.isInteger()){
+                return true;
+            }
+            stack.pop();
+            List<NestedInteger> list = cur.getList();
+            for(int i = list.size() - 1; i >= 0; i--){
+                stack.push(list.get(i));
+            }
+        }
+        return false;
+    }
+}
+```
+
