--- a/leetcode/贪心思想.md
+++ b/leetcode/贪心思想.md
@@ -1,4 +1,4 @@
-# 621. Task Scheduler
+## 621. Task Scheduler
 
 题目描述：字符数组代表CPU需要之执行的任务，每个任务用大写字母A到Z表示，相同的任务执行后需要等待n个任务执行，如果尚存任务未执行且CPU在时间片无任务（所有任务需要等待），使用idle表示。求执行全部任务的最短时间。
 
@@ -50,7 +50,7 @@ public int leastInterval(char[] tasks, int n) {
 
 
 
-# 767. Reorganize String
+## 767. Reorganize String
 
 题目描述：给定字符串S，判断是否能将S重新组合为没有两个连续重复字符的组合，如果可能，输出组合；否则输出空字符串。
 
@@ -98,6 +98,65 @@ public String reorganizeString(String S) {
             if(queue.isEmpty()) break;
         }
         return s.toString();
+    }
+```
+
+## 134. Gas Station
+
+题目描述：给定数组表示N个加油站，每个加油站的加油量为gas[i]。从i到i+1花费的油耗是cost[i]，旅程开始时油箱为空。如果可以完成加油站的环形遍历，返回开始时的加油站坐标，否则返回-1。
+
+```
+Example 1:
+Input: 
+gas  = [1,2,3,4,5]
+cost = [3,4,5,1,2]
+
+Output: 3
+
+Explanation:
+Start at station 3 (index 3) and fill up with 4 unit of gas. Your tank = 0 + 4 = 4
+Travel to station 4. Your tank = 4 - 1 + 5 = 8
+Travel to station 0. Your tank = 8 - 2 + 1 = 7
+Travel to station 1. Your tank = 7 - 3 + 2 = 6
+Travel to station 2. Your tank = 6 - 4 + 3 = 5
+Travel to station 3. The cost is 5. Your gas is just enough to travel back to station 3.
+Therefore, return 3 as the starting index.
+Example 2:
+Input: 
+gas  = [2,3,4]
+cost = [3,4,3]
+
+Output: -1
+
+Explanation:
+You can't start at station 0 or 1, as there is not enough gas to travel to the next station.
+Let's start at station 2 and fill up with 4 unit of gas. Your tank = 0 + 4 = 4
+Travel to station 0. Your tank = 4 - 3 + 2 = 3
+Travel to station 1. Your tank = 3 - 3 + 3 = 3
+You cannot travel back to station 2, as it requires 4 unit of gas but you only have 3.
+Therefore, you can't travel around the circuit once no matter where you start.
+```
+
+解题思路：这道题拿到手第一个想法是贪心思想。遍历数组，累加剩余的油量rest，如果在i处满足gas[i] - cost[i] + rest < 0；这意味着汽车无法到达i+1加油站。那此时起始点最早应在i+1开始。但这里有一个问题，如果无法进行回环，数组就会越界。这里我们需要一个技巧，先遍历从0到i的所有gas[i] - cost[i]，如果总加油量比总油耗少，则一定不能满足回环条件。反之，遍历到末尾一定会找到一个起始点，代码如下：
+
+```java
+ public int canCompleteCircuit(int[] gas, int[] cost) {
+        int n = gas.length;
+        int total = 0;
+        for(int i = 0; i < n; i++){
+            total += gas[i] - cost[i];
+        }
+        if(total < 0) return -1;
+        int start = 0;
+        int rest = 0;
+        for(int i = 0; i < n; i++){
+            if(gas[i] - cost[i] + rest < 0){
+                start = i + 1;
+                rest = 0;
+            }
+            else rest += gas[i] - cost[i];
+        }
+        return start;
     }
 ```
 
