--- a/算法/多线程.md
+++ b/算法/多线程.md
@@ -1,6 +1,6 @@
 # 多线程通信
 
-题目描述：两个线程交替打印1-100.针对这个问题，我们从以下几种方法入手：
+Java采用共享内存的形式进行线程通信的，通过具体题目我们来一探究竟。题目描述：两个线程交替打印1-100.针对这个问题，我们从以下几种方法入手：
 
 ## 等待通知机制
 
@@ -218,7 +218,67 @@ private static void join() throws InterruptedException {
 
 `t1`和`t2`线程都结束后，主线程退出。
 
+## 管道
+
+Java 虽说是基于内存通信的，但也可以使用管道通信。
+
+```java
+    public static void piped() throws IOException {
+        //面向于字符 PipedInputStream 面向于字节
+        PipedWriter writer = new PipedWriter();
+        PipedReader reader = new PipedReader();
+
+        //输入输出流建立连接
+        writer.connect(reader);
+
+
+        Thread t1 = new Thread(new Runnable() {
+            @Override
+            public void run() {
+                LOGGER.info("running");
+                try {
+                    for (int i = 0; i < 10; i++) {
+
+                        writer.write(i+"");
+                        Thread.sleep(10);
+                    }
+                } catch (Exception e) {
+
+                } finally {
+                    try {
+                        writer.close();
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                    }
+                }
+
+            }
+        });
+        Thread t2 = new Thread(new Runnable() {
+            @Override
+            public void run() {
+                LOGGER.info("running2");
+                int msg = 0;
+                try {
+                    while ((msg = reader.read()) != -1) {
+                        LOGGER.info("msg={}", (char) msg);
+                    }
+
+                } catch (Exception e) {
+
+                }
+            }
+        });
+        t1.start();
+        t2.start();
+    }
+```
+
+
+
 # J.U.C - AQS
+
+`java.util.concurrent`（J.U.C）大大提高了并发性能，`AQS` 被认为是 J.U.C 的核心。
 
 ## CountDownLatch
 
@@ -356,4 +416,112 @@ public class SemaphoreExample {
     }
 }
 ```
+
+# 中断
+
+## Interrupt
+
+如果一个线程的 `run()` 方法执行一个无限循环，并且没有执行 `sleep()` 等会抛出 `InterruptedException` 的操作，那么调用线程的 `interrupt()` 方法就无法使线程提前结束。
+
+ 但是调用 `interrupt()` 方法会设置线程的中断标记，此时调用 interrupted() 方法会返回 true。因此可以在循环体中使用 `interrupted()` 方法来判断线程是否处于中断状态，从而提前结束线程。假如被阻塞，没有占用CPU运行的线程是不可能给自己的中断状态置位的，这就会抛出`InterruptedException`。
+
+```java
+public class StopThread implements Runnable{
+    @Override
+    public void run() {
+        while ( !Thread.currentThread().isInterrupted()) {
+            // 线程执行具体逻辑
+            System.out.println(Thread.currentThread().getName() + "运行中。");
+        }
+
+        System.out.println(Thread.currentThread().getName() + "退出。");
+    }
+
+    public static void main(String[] args) throws InterruptedException {
+        Thread thread = new Thread(new StopThread(), "thread A");
+        thread.start();
+        Thread.sleep(1000);
+        System.out.println("main thread is running");
+        thread.interrupt();
+
+    }
+}
+```
+
+上面的代码不会抛出异常，但如果线程被阻塞，终端将会抛出异常。
+
+```java
+public class StopThread implements Runnable{
+    @Override
+    public void run() {
+        try {
+            Thread.sleep(4000);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        System.out.println(Thread.currentThread().getName() + "退出。");
+    }
+
+    public static void main(String[] args) throws InterruptedException {
+        Thread thread = new Thread(new StopThread(), "thread A");
+        thread.start();
+        thread.interrupt();
+        System.out.println("main thread is running");
+
+    }
+}
+```
+
+## 线程池 awaitTermination() 方法
+
+使用 `awaitTermination() `,来让主线程等待线程池中所有任务执行完毕，效果类似于CouontDownLatch的`await()`方法。
+
+```java
+ private static void executorService() throws Exception{
+        BlockingQueue<Runnable> queue = new LinkedBlockingQueue<>(10) ;
+        ThreadPoolExecutor poolExecutor = new ThreadPoolExecutor(5,5,1, TimeUnit.MILLISECONDS,queue) ;
+        poolExecutor.execute(new Runnable() {
+            @Override
+            public void run() {
+                LOGGER.info("running");
+                try {
+                    Thread.sleep(3000);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        });
+        poolExecutor.execute(new Runnable() {
+            @Override
+            public void run() {
+                LOGGER.info("running2");
+                try {
+                    Thread.sleep(2000);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        });
+
+        poolExecutor.shutdown();
+        while (!poolExecutor.awaitTermination(1,TimeUnit.SECONDS)){
+            LOGGER.info("线程还在执行。。。");
+        }
+        LOGGER.info("main over");
+    }
+```
+
+使用这个 `awaitTermination()` 方法的前提需要关闭线程池，如调用了 `shutdown()` 方法。
+
+ 调用了 `shutdown()` 之后线程池会停止接受新任务，并且会平滑的关闭线程池中现有的任务。
+
+详情见[线程池](https://github.com/solo941/notes/blob/master/并发/线程池.md)。
+
+# 参考资料
+
+[深入理解线程通信](https://github.com/crossoverJie/JCSprout/blob/master/MD/concurrent/thread-communication.md)
+
+[Java 并发](https://github.com/CyC2018/CS-Notes/blob/master/notes/Java%20并发.md#interrupted)
+
+[面试必问！Java 多线程中两个线程交替执行，一个输出偶数，一个输出奇数](https://www.cnblogs.com/stateis0/p/9091254.html)
 
