--- a/leetcode/双指针找重复元素.md
+++ b/leetcode/双指针找重复元素.md
@@ -42,3 +42,50 @@ t = X + nY + K
 ```
 
 X表示从头指针到环链表入口的距离，Y是环的长度，K是链表入口到相遇点的距离，t是步数。慢指针在相遇位置走X距离，一定会到环表的入口。
+
+
+
+## 剑指offer:数组中重复的数字
+
+题目描述：在一个长度为n的数组里的所有数字都在0到n-1的范围内。数组中某些数字是重复的，但不知道有几个数字是重复的。也不知道每个数字重复几次。请找出数组中任意一个重复的数字。
+
+例如，如果输入长度为7的数组{2,3,1,0,2,5,3}，那么对应的输出是第一个重复的数字2。
+
+解题思路：如果可以由辅助空间，创建相同大小辅助数组（Arrays.fill([], -1)，否则0位置会出错)，逐位复制原数组元素到新数组对应的index,如果与新数组的index值相同，判定为重复元素。跟上面的题目类似，我们寻找的最好的解题思路，一定是时间复杂度O(n)，空间复杂度O(1)的。考虑到这个题数字在0-n-1的范围内，上面的找环方法不成立，但我们依然可以运用数组的每个index只能对应相等的数，否则重复的思路。本题可以通过交换位置，index为i的数字j与index为j的数字m比较，如果不同，交换位置，保证每个index对应本身。如果j与m相同，元素重复。
+
+```java
+public class Solution {
+    // Parameters:
+    //    numbers:     an array of integers
+    //    length:      the length of array numbers
+    //    duplication: (Output) the duplicated number in the array number,length of duplication array is 1,so using duplication[0] = ? in implementation;
+    //                  Here duplication like pointor in C/C++, duplication[0] equal *duplication in C/C++
+    //    这里要特别注意~返回任意重复的一个，赋值duplication[0]
+    // Return value:       true if the input is valid, and there are some duplications in the array number
+    //                     otherwise false
+    public boolean duplicate(int numbers[],int length,int [] duplication) {
+        if(length < 2) return false;
+        int j;
+        for(int i = 0; i < length; i++){
+            j = numbers[i];
+            while(j != i){
+                if(numbers[j] == j){
+                    duplication[0] = j;
+                    return true;
+                }
+                else swap(numbers, i, j);
+                j = numbers[i];
+            }
+        }
+        return false;
+    }
+    private void swap(int[] nums, int i, int j){
+        int temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+}
+```
+
+
+
