--- a/剑指offer/二分查找.md
+++ b/剑指offer/二分查找.md
@@ -42,3 +42,4 @@ public int minNumberInRotateArray(int [] array) {
     }
 ```
 
+出现这种错误的原因，只有两个元素是，如[0,1]，mid =0, 此时arr[mid]与arr[l]比较，都是0相等，会返回1.因此只能与末尾去比较，才能保证mid与比较位之间数字的单调性。
