--- a/剑指offer/链表.md
+++ b/剑指offer/链表.md
@@ -45,3 +45,78 @@ public ListNode deleteDuplication(ListNode pHead)
     }
 ```
 
+## 反转链表
+
+题目描述：输入一个链表，反转链表后，输出新链表的表头。
+
+解题思路：递归和非递归都需要掌握，核心是，断开当前节点到下个节点的指针，下个节点指向当前结点，注意返回的入口是最后一个节点。
+
+```java
+public ListNode ReverseList(ListNode head) {
+        if(head == null || head.next == null) return head;
+        ListNode next = head.next;
+        head.next = null;
+        ListNode newHead = ReverseList(next);
+        next.next = head;
+        return newHead;
+    }
+```
+
+非递归使用头插法
+
+```java
+public ListNode ReverseList(ListNode head) {
+        ListNode newHead = new ListNode(-1);
+        while(head!=null){
+            ListNode next = head.next;
+            head.next = newHead.next;
+            newHead.next = head;
+            head = next;
+        }
+        return newHead.next;
+    }
+```
+
+## 合并两个排序的链表
+
+题目描述：输入两个单调递增的链表，输出两个链表合成后的链表，当然我们需要合成后的链表满足单调不减规则。
+
+非递归：
+
+```java
+public ListNode Merge(ListNode list1,ListNode list2) {
+        ListNode newHead = new ListNode(-1);
+        ListNode cur = newHead;
+        while(list1 != null && list2 != null){
+            if (list1.val <= list2.val){
+                cur.next = list1;
+                list1 = list1.next;
+            }else {
+                cur.next = list2;
+                list2 = list2.next;
+            }
+            cur = cur.next;
+        }
+        if(list1 != null) cur.next = list1;
+        else if(list2 != null) cur.next = list2;
+        return newHead.next;
+    }
+```
+
+递归：
+
+```java
+public ListNode Merge(ListNode list1,ListNode list2) {
+        if(list1 == null) return list2;
+        if(list2 == null) return list1;
+        if(list1.val <= list2.val){
+            list1.next = Merge(list1.next, list2);
+            return list1;
+        }
+        else {
+            list2.next = Merge(list1, list2.next);
+            return list2;
+        }
+    }
+```
+
