--- a/剑指offer/大数问题.md
+++ b/剑指offer/大数问题.md
@@ -37,3 +37,28 @@ public void printMaxDigits(int n){
 ```
 
 这里要注意测试特殊输入，如-1，0。
+
+
+
+## 把数组排成最小的数
+
+题目描述：输入一个正整数数组，把数组里所有数字拼接起来排成一个数，打印能拼接出的所有数字中最小的一个。例如输入数组{3，32，321}，则打印出这三个数字能排成的最小数字为321323。
+
+解题思路：每两个数m,n合并时，需要考虑mn和nm的大小比较，比较容易想到的是逐位比较，小的放前面；相同比下一位。假设每位都相同，数n遍历结束，则从n的首位与m的当前位比较，重复上面的过程。但是组合的时候会有一个问题，越界溢出。m和n拼在一起可能超出int的范围，这里可以将m和n转化成字符串解决这一问题。字符串在比较时，可以直接使用Arrays.sort将字符串拼接后比较，简单且直接实现了需求。
+
+```java
+public String PrintMinNumber(int [] numbers) {
+        String result = "";
+        if(numbers == null || numbers.length == 0) return result;
+        int n = numbers.length;
+        String[] nums = new String[n];
+        for(int i = 0; i < n; i++){
+            nums[i] = numbers[i] + "";
+        }
+        Arrays.sort(nums, (a1, a2) -> (a1+a2).compareTo(a2 + a1));
+        for(String num : nums)
+            result += num;
+        return result;
+    }
+```
+
