--- a/剑指offer/动态规划.md
+++ b/剑指offer/动态规划.md
@@ -48,3 +48,33 @@ public boolean match(char[] str, char[] pattern)
     }
 ```
 
+## 丑数
+
+题目描述：把只包含质因子2、3和5的数称作丑数（Ugly Number）。例如6、8都是丑数，但14不是，因为它包含质因子7。 习惯上我们把1当做是第一个丑数。求按从小到大的顺序的第N个丑数。
+
+解题思路：第一种方法最直接，遍历每个数时，判断是否能被2，3，5整除，即看最后是否为1。但缺点也很明显，一是复杂度高，我们只需要知道哪些是丑数，这种方法所有的整数都会遍历，算法的终止点也不好找。
+
+第二种方法有难度，使用三个队列分别存储丑数中2的倍数，3的倍数和5的倍数的数。每个入相应队列的数，都是当前最小乘数分别乘2，3，5，第i轮三个数进行比较，最小的元素出队列并且记录为第i小的丑数.这里的最小需要使用指针记录，比如2出队列后，4入队列（2*2），但5的下个乘数还是1，因此需要使用三个指针。直到遍历到第N小的丑数。
+
+```java
+ public int GetUglyNumber_Solution(int N) {
+    if (N <= 6)
+        return N;
+    int i2 = 0, i3 = 0, i5 = 0;
+    int[] dp = new int[N];
+    dp[0] = 1;
+    for (int i = 1; i < N; i++) {
+        int next2 = dp[i2] * 2, next3 = dp[i3] * 3, next5 = dp[i5] * 5;
+        dp[i] = Math.min(next2, Math.min(next3, next5));
+        if (dp[i] == next2)
+            i2++;
+        if (dp[i] == next3)
+            i3++;
+        if (dp[i] == next5)
+            i5++;
+    }
+    return dp[N - 1];
+}
+```
+
+第二种方法只需要遍历N个丑数，时间复杂度低于第一种方法。
