--- a/剑指offer/查找.md
+++ b/剑指offer/查找.md
@@ -103,3 +103,84 @@ public int FirstNotRepeatingChar2(String str) {
 ```
 
 bitset总结连接：
+
+## 面试题51：数组中的逆序对
+
+题目描述：在数组中的两个数字，如果前面一个数字大于后面的数字，则这两个数字组成一个逆序对。输入一个数组,求出这个数组中的逆序对的总数P。并将P对1000000007取模的结果输出。
+即输出P%1000000007
+
+解题思路：第一个想法是每个数和之后的数比较，时间复杂度为O(n^2)。这显然不是最优解，因为会有很多重复工作。那么就需要考虑有没有时间复杂度为O(nlogn)的方法。
+
+考虑到题目的目的是找逆序对，每个数都要统计自己的逆序，快排不合适，这里考虑归并排序，每次merge的时候，统计逆序的个数，并在过程中完成归并排序。
+
+```java
+private int[] tempArray;
+    private long count =0;
+    public int InversePairs(int [] array) {
+        if(array == null || array.length <2) return 0;
+        int n = array.length;
+        tempArray = new int[n];
+        mergeSort(array,0,n - 1);
+        return (int) (count % 1000000007);
+    }
+
+    private void mergeSort(int[] array, int l, int h) {
+        if(l >= h) return;
+        int m = l + (h - l) /2 ;
+        mergeSort(array, l, m);
+        mergeSort(array, m+1, h);
+        merge(array,l,m,h);
+    }
+
+    private void merge(int[] array, int l, int m, int h) {
+        int i = l, j = m+1, k = l;
+        while (i <= m && j <= h){
+            if(array[i] <= array[j]) tempArray[k++] = array[i++];
+            else{
+                count += m - i + 1;
+                tempArray[k++] = array[j++];
+            }
+        }
+        while(i <= m) tempArray[k++] = array[i++];
+        while(j <= h) tempArray[k++] = array[j++];
+        for(i = l; i <= h; i++){
+            array[i] = tempArray[i];
+        }
+    }
+```
+
+这里需要考虑的一个地方，题目中给出数据范围：
+
+```
+题目保证输入的数组中没有的相同的数字
+数据范围：
+	对于%50的数据,size<=10^4
+	对于%75的数据,size<=10^5
+	对于%100的数据,size<=2*10^5
+```
+
+int的范围2^31 约等于10^9，如果数据的大小>10^4，使用int存储逆序数可能会引起越界，所以要使用Long存储逆序个数。
+
+## 数字在排序数组中查找次数
+
+题目描述：统计一个数字在排序数组中出现的次数。
+
+解题思路：既然是排序数组的查找问题，首先想到的就是二分查找，但这里二分查找需要变形。存在重复数字，不能确定查找到的k是第几个k。如果想要寻找第一个k，在mid查找到k时，将high指针移到mid位置，这样可以保证查到的k一定是第一个。那最后一个k呢，我们可以找k+1，它的index - k第一次出现的位置，就是k的个数。但要注意两个边界条件：1.k+1不存在引起的数组越界，所以high的初始值设为数组长度并且index的返回值要判断长度；2.k不存在，即k的首部对应数字不是k。
+
+```java
+ public int GetNumberOfK(int [] array , int k) {
+       int firstIndex = BinarySearch(array, k);
+       int lastIndex = BinarySearch(array, k+1);
+       return  firstIndex == array.length ||array[firstIndex] != k ? 0 : lastIndex - firstIndex;
+    }
+    private int BinarySearch(int[] array, int k){
+        int l = 0, h = array.length;
+        while(l < h){
+            int m = l + (h - l) / 2;
+            if(array[m] >= k) h = m;
+            else l = m + 1;
+        }
+        return l;
+    }
+```
+
