--- a/剑指offer/查找.md
+++ b/剑指offer/查找.md
@@ -184,3 +184,49 @@ int的范围2^31 约等于10^9，如果数据的大小>10^4，使用int存储逆
     }
 ```
 
+## 数组中只出现一次的数字
+
+题目描述：一个整型数组里除了两个数字之外，其他的数字都出现了两次。请写程序找出这两个只出现一次的数字。
+
+解题思路：这道题和前面的第一个只出现一次的字符一个思路，使用Bitset存储。
+
+```java
+private boolean isFirst = true;
+    public void FindNumsAppearOnce(int [] array,int num1[] , int num2[]) {
+        BitSet b1 = new BitSet();
+        BitSet b2 = new BitSet();
+        for(int i : array){
+            if(b1.get(i)) b2.set(i);
+            else b1.set(i);
+        }
+        for(int i : array){
+            if(!b2.get(i) && isFirst){
+                isFirst = false;
+                num1[0] = i;
+            }
+            else if(!b2.get(i)){
+                num2[0] = i;
+                return;
+            }
+        }
+        return;
+    }
+```
+
+这道题还有一个思路：两个不相等的元素在位级表示上必定会有一位存在不同，将数组的所有元素异或得到的结果为不存在重复的两个元素异或的结果。找出最右侧不为0的位，异或操作将原数组分成两部分，每一部分一个数字只出现一次。
+
+```java
+public void FindNumsAppearOnce(int[] nums, int num1[], int num2[]) {
+    int diff = 0;
+    for (int num : nums)
+        diff ^= num;
+    diff &= -diff;
+    for (int num : nums) {
+        if ((num & diff) == 0)
+            num1[0] ^= num;
+        else
+            num2[0] ^= num;
+    }
+}
+```
+
