--- a/剑指offer/数组.md
+++ b/剑指offer/数组.md
@@ -32,3 +32,63 @@ public ArrayList<ArrayList<Integer> > FindContinuousSequence(int sum) {
     }
 ```
 
+## 队列的最大值
+
+题目描述：给定一个数组和滑动窗口的大小，找出所有滑动窗口里数值的最大值。例如，如果输入数组{2,3,4,2,6,2,5,1}及滑动窗口的大小3，那么一共存在6个滑动窗口，他们的最大值分别为{4,4,6,6,6,5}； 针对数组{2,3,4,2,6,2,5,1}的滑动窗口有以下6个：      {[2,3,4],2,6,2,5,1}， {2,[3,4,2],6,2,5,1}，      {2,3,[4,2,6],2,5,1}，      {2,3,4,[2,6,2],5,1}， {2,3,4,2,[6,2,5],1}，      {2,3,4,2,6,[2,5,1]}。
+
+解题思路：第一反应是假设滑动窗口长度为k，每一次头指针和尾指针往前一位，控制窗口长度。但这种方法显然不是最优的(O(kn))，我们试图找一种时间复杂度为O(n)的解法。第一种方法每一次移动，遍历了重复的k-1的元素，我们需要找一种数据结构储存k-1个元素。每次输出最大值，我们想到大根堆，查找最大值时的时间复杂度为O(1)。
+
+```java
+private int i = 0;
+    public ArrayList<Integer> maxInWindows(int [] num, int size)
+    {
+        ArrayList<Integer> result = new ArrayList<>();
+        PriorityQueue<Integer> heap = new PriorityQueue<>((o1,o2) -> o2 - o1);
+        if(num == null || num.length < size || size == 0) return result;
+        while(i < size){
+            heap.add(num[i++]);
+        }
+        result.add(heap.peek());
+        for(int j = i, i = 0; j < num.length; i++, j++){
+            heap.remove(num[i]);
+            heap.add(num[j]);
+            result.add(heap.peek());
+        }
+        return result;
+    }
+```
+
+## 反转字符串
+
+题目描述：牛客最近来了一个新员工Fish，每天早晨总是会拿着一本英文杂志，写些句子在本子上。同事Cat对Fish写的内容颇感兴趣，有一天他向Fish借来翻看，但却读不懂它的意思。例如，“student.
+a am I”。后来才意识到，这家伙原来把句子单词的顺序翻转了，正确的句子应该是“I am a student.”。Cat对一一的翻转这些单词顺序可不在行，你能帮助他么？
+
+解题思路：将字符串转化为字节数组，不使用额外的空间。先反转每个单词，再反转整个数组。这里要特别注意，因为以空格判断单词的结束，所以反转的尾指针是j-1，但最后一个单词后面没有空格，所以要单独拉出来讨论。放在||前面，不然会数组越界。
+
+```java
+ public String ReverseSentence(String str) {
+        char[] chars = str.toCharArray();
+        int n = str.length();
+        int i = 0, j =0;
+        Reverse(chars,0,n - 1);
+        while(j <= n){
+            if(j == n || chars[j] ==' '){
+                Reverse(chars,i,j -1);
+                i = j + 1;
+            }
+            j++;
+        }
+        return new String(chars);
+    }
+    private void Reverse(char[] chars, int i, int j){
+        while(i < j){
+            swap(chars, i++, j--);
+        }
+    }
+    private void swap(char[] chars, int i, int j){
+        char temp = chars[i];
+        chars[i] = chars[j];
+        chars[j] = temp;
+    }
+```
+
