--- a/剑指offer/动态规划.md
+++ b/剑指offer/动态规划.md
@@ -78,3 +78,72 @@ public boolean match(char[] str, char[] pattern)
 ```
 
 第二种方法只需要遍历N个丑数，时间复杂度低于第一种方法。
+
+## n个骰子的点数
+
+题目描述：把 n 个骰子仍在地上，求点数和为 s 的概率。
+
+解题思路：在统计n个骰子的点数时，挨个统计，那么第i+1个骰子时点数和只与前i个骰子点数和有关。
+
+行记录骰子个数，列记录总的点数。转移方程
+
+```
+dp[i+1][j] = dp[i][j-k]++
+```
+
+其中k为第i+1个骰子的点数可能性（1-6)。
+
+```java
+public List<Map.Entry<Integer, Double>> dicesSum(int n) {
+    final int face = 6;
+    final int pointNum = face * n;
+    long[][] dp = new long[n + 1][pointNum + 1];
+
+    for (int i = 1; i <= face; i++)
+        dp[1][i] = 1;
+
+    for (int i = 2; i <= n; i++)
+        for (int j = i; j <= pointNum; j++) 
+            for (int k = 1; k <= face && k <= j; k++)
+                dp[i][j] += dp[i - 1][j - k];
+
+    final double totalNum = Math.pow(6, n);
+    List<Map.Entry<Integer, Double>> ret = new ArrayList<>();
+    for (int i = n; i <= pointNum; i++)
+        ret.add(new AbstractMap.SimpleEntry<>(i, dp[n][i] / totalNum));
+
+    return ret;
+}
+```
+
+时间复杂度和空间复杂度均为O(n^2)。如果n很大，空间复杂度过高，有没有对空间的优化呢。仔细分析，第i+1次只与第i次的点数有关，dp数组实际上两行就可以搞定了。只需要在记录当前点数前清空当前行，并使用遍历控制当前行数。
+
+```java
+public List<Map.Entry<Integer, Double>> dicesSum(int n) {
+    final int face = 6;
+    final int pointNum = face * n;
+    long[][] dp = new long[2][pointNum + 1];
+
+    for (int i = 1; i <= face; i++)
+        dp[0][i] = 1;
+
+    int flag = 1;                                     /* 旋转标记 */
+    for (int i = 2; i <= n; i++, flag = 1 - flag) {
+        for (int j = 0; j <= pointNum; j++)
+            dp[flag][j] = 0;                          /* 旋转数组清零 */
+
+        for (int j = i; j <= pointNum; j++)
+            for (int k = 1; k <= face && k <= j; k++)
+                dp[flag][j] += dp[1 - flag][j - k];
+    }
+
+    final double totalNum = Math.pow(6, n);
+    List<Map.Entry<Integer, Double>> ret = new ArrayList<>();
+    for (int i = n; i <= pointNum; i++)
+        ret.add(new AbstractMap.SimpleEntry<>(i, dp[1 - flag][i] / totalNum));
+
+    return ret;
+}
+```
+
+在最后统计概率时，要统计第n行的，所以统计的时1-flag行。
