--- a/leetcode/贪心思想.md
+++ b/leetcode/贪心思想.md
@@ -160,3 +160,59 @@ Therefore, you can't travel around the circuit once no matter where you start.
     }
 ```
 
+## 131.Candy
+
+题目描述：
+
+There are *N* children standing in a line. Each child is assigned a rating value. You are giving candies to these children subjected to the following requirements:
+
+- Each child must have at least one candy.
+- Children with a higher rating get more candies than their neighbors.
+
+解题思路，如果每个同学只看前一个人的糖果数，共有三种情况：
+
+- ratings[i] > ratings[i-1]:那么第i个同学一定比i-1个同学糖果(prev)多，贪心考虑，第i个同学拿到prev+1个糖果；
+- ratings[i] == ratings[i-1]:此时采用贪心策略，第i个同学拿到1个糖果；
+- ratings[i] <ratings[i-1]：贪心策略告诉我们，第i个同学应该拿prev-1个糖果
+
+这个思路看起来天衣无缝，但我们要考虑第一个条件，糖果必须是整数，也就是说：
+
+**存在糖果下降到<0的可能性，不能只看该同学的前一位，如果出现<0的情况，开始下降的第j个同学的prev，应该相应地增加。**我们可以参考一下下面的图：
+
+
+
+代码如下：
+
+```java
+public static int candy(int[] ratings) {
+    int pre = 1, countDown = 0, total = 1;
+    for (int i = 1; i < ratings.length; i++) {
+        if (ratings[i] >= ratings[i - 1]) {
+            if (countDown > 0) {
+                total += countDown * (countDown + 1) / 2;   // progression part
+                if (countDown >= pre) { // check if pre is tall enough
+                    total += countDown - pre + 1;
+                }
+                pre = 1;    // when ascending and there is countDown, prev should be 1
+                countDown = 0;
+            }
+            pre = ratings[i] == ratings[i - 1] ? 1 : pre + 1;   // when equals to previous one, set to 1. Else set to prev + 1
+            total += pre;
+        }
+        else {
+            countDown++;
+        }
+    }
+    if (countDown > 0) {    // check if there is countDown in the end
+        total += countDown * (countDown + 1) / 2;
+        if (countDown >= pre) {
+            total += countDown - pre + 1;
+        }
+    }
+    return total;
+}
+```
+
+如果出现图中的情况，我们就从连续下降的最后一位向前看，最后一位是1，连续下降的第二位就是countDown ，第一位（峰值）应该相对应的增加为countDown +1。
+
+采用这种方法，只需要一次遍历，提升性能显著。
