--- a/leetcode/贪心思想.md
+++ b/leetcode/贪心思想.md
@@ -179,7 +179,11 @@ There are *N* children standing in a line. Each child is assigned a rating value
 
 **存在糖果下降到<0的可能性，不能只看该同学的前一位，如果出现<0的情况，开始下降的第j个同学的prev，应该相应地增加。**我们可以参考一下下面的图：
 
+![pic](https://github.com/solo941/algorithms/blob/master/leetcode/pics/candy5.png)
 
+数组遍历到cur时，不再连续递减。我们就从连续下降的最后一位向前看，最后一位是1，向前反向遍历至连续下降的第二位就是countDown（连续下降的位数） ，第一位（峰值）应该相对应的增加为countDown +1。
+
+![pic](https://github.com/solo941/algorithms/blob/master/leetcode/pics/candy6.png)
 
 代码如下：
 
@@ -212,7 +216,5 @@ public static int candy(int[] ratings) {
     return total;
 }
 ```
-
-如果出现图中的情况，我们就从连续下降的最后一位向前看，最后一位是1，连续下降的第二位就是countDown ，第一位（峰值）应该相对应的增加为countDown +1。
 
 采用这种方法，只需要一次遍历，提升性能显著。
